# Ultimation

./: CMakeLists.txt  Grundsätzliche Übersicht.xmi  README.md  Session.cpp  Session.hpp  Ui.hpp  User.hpp  main.cpp  test.h  testprogramm.cpp  tictactoe_field.cpp  tictactoe_field.h
.github/workflows/: cmake-single-platform.yml  codeql.yml  super-linter.yml
Anwendungsfall/: CD Ultimation Backend.xmi
Klassendiagramm/SQL_Backend/: CD Ultimation SQLBackend.xmi
Ultimation/: CMakeLists.txt  Ultimation.cpp  Ultimation.h  main.cpp
src/: main.cpp
src/Datenbank/: FieldTable.hpp  GameOverviewTable.hpp  PlayerTable.hpp  SQLAbfrage.cpp  SQLAbfrage.hpp  Spieltabele.hpp  UserTabel.hpp
